[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gpas-client"
description = "gPAS-Client: Communication wrapper to use gPAS within python ETL pipelines"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Pseudonymization", "gPAS"]
license = {text = "GNU General Public License 3"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
